2024-02-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tramp-archive-tests.el (tramp-archive-test-file-archive)
	(tramp-archive-test-archive): Don't use `defconst` if it's not
	constant.

	* tramp-tests.el (tramp--test-instrument-test-case)
	(tramp-test01-file-name-syntax): Use more precise regexp.

2024-01-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test26-file-name-completion)
	(tramp-test26-interactive-file-name-completion): Run also on MS Windows.

2024-01-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (ert-remote-temporary-file-directory):
	Make it a defvar.

2023-12-30  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.7.0 released.

2023-12-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test35-exec-path-direct-async)
	(tramp-test35-remote-path-direct-async): New tests.

2023-12-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test18-file-attributes)
	(tramp-test35-remote-path): Adapt tests.

2023-12-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test31-signal-process): Extend.

2023-11-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test31-signal-process): Extend.

2023-11-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-timeout-handler): Be more verbose.

2023-10-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test05-expand-file-name-tilde): New test.

2023-09-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test17-insert-directory): Improve check.
	(tramp--test-check-files): Don't err out when "printenv" doesn't
	exist on remote side.
	(tramp-test47-read-password): Remove :unstable tag.
	(tramp-test47-read-otp-password): Rename.

2023-09-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test46-read-password): Use `copy-tree' but
	`copy-sequence'.
	(tramp-test46-read-otp-password): New test.
